k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: t19
  istio-injection: enabled
